--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "mathsgpd/bs",
+	"name": "mathsgod/bs",
 	"description": "Raymond php bootstrap library",
 	"autoload": {
 		"psr-4": {
@@ -8,7 +8,7 @@
 	},
 	"require": {
 		"php": ">=5.4",
-		"mathsgpd/p-query":"1.*"
+		"mathsgod/p-query":"1.*"
 	},
 	"type": "library",
 	"license": "proprietary",
