--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
 		}
 	},
 	"require": {
-		"php": ">=5.4",
-		"mathsgod/p-query": "master-dev"
+		"php": ">=5.6",
+		"mathsgod/p-query": "^2.0.6"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "*"
