--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
 			"name": "Raymond Chong"
 		}
 	],
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"scripts": {
+		"test": "phpunit tests"
+	}
 }
